# nanonis-xarray

./: .pre-commit-config.yaml  CITATION.cff  README.md  development.md  notes.md  noxfile.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
docs/: development.md  example.py
scripts/: Bootstrap.ps1  New-PythonVenv.ps1  Release-Package.ps1  Release-Project.ps1
scripts/utils/: New-PythonVenv.ps1
src/nanonis_xarray/: __init__.py  autonesting_dict.py  data.py  format.py  header.py  nanonis_dat_backend_entrypoint.py  read_dat.py
tests/: test_autonesting_dict.py  test_format.py  test_open_dataset.py  test_read_dat.py  test_units.py
