[project]
name = "nanonis-xarray"
description = "Read a Nanonis spectroscopy .dat file into a xarray Dataset"
authors = [{ name = "Angelo Peronio" }]
keywords = [
    "Nanonis",
    "SPECS",
    "xarray",
    "STM",
    "STS",
    "SPS",
    "AFM",
    "Scanning Tunnelling Microscopy",
    "Scanning Tunnelling Spectroscopy",
    "Scanning Probe Spectroscopy",
    "Atomic Force Microscopy",
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
# Scientific Python reccomendation on Python and xarray versions to support.
# <https://scientific-python.org/specs/spec-0000/>
# Upgrade the pyupgrade configuration in .pre-commit.config.yaml accordingly.
requires-python = ">= 3.10"
dependencies = ["xarray >= 2022.6.0", "pint >= 0.24"]
optional-dependencies.dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
    "nanonis-xarray[test]",
]
optional-dependencies.test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.only-packages = true
version.source = "vcs"

[tool.hatch.version.raw-options]
# Version tag pattern: v[major].[minor].[patch]
# https://setuptools-scm.readthedocs.io/en/latest/config/#setuptools_scm._config.DEFAULT_TAG_REGEX
# Single quote --> literal string, https://toml.io/en/v1.0.0#string
tag_regex = '^(?P<version>v?\d+\.\d+\.\d+)$'
# To be able to publish dev versions to TestPyPI.
# https://github.com/ofek/hatch-vcs/discussions/12
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=nanonis_xarray"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]
extend-per-file-ignores."tests/*.py" = [
    "S101",    # https://docs.astral.sh/ruff/rules/assert/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
]
pydocstyle.convention = "numpy"
